<resources>
    <string name="app_name">FrizerskiSalon_MobileClient</string>
    <string-array name="spol_array">
        <item>Moški</item>
        <item>Ženski</item>
    </string-array>
    <string name="rezerviraj_termin">Rezerviraj termin</string>
    <string name="izbrane_storitve">Izbrane storitve: /</string>
    <string name="label_izbrane_storitve">Izbrane storitve: %1$s</string>
    <string name="izberi_storitve">Izberi storitve</string>
    <string name="opomba_vec_storitev">*Možna je izbira več storitev hkrati.</string>
    <string name="preglej_frizerje">Preglej vse frizerje</string>
    <string name="izberi_datum">Izberi datum</string>
    <string name="preveri">Preveri</string>
    <string name="moji_termini">Moji termini</string>
    <string name="prijava_uporabnika">Prijava uporabnika</string>
    <string name="uporabnisko_ime">Uporabniško ime</string>
    <string name="geslo">Geslo</string>
    <string name="prijava">Prijava</string>
    <string name="signup_link">Še nimaš računa? Registriraj se.</string>
    <string name="registracija_uporabnika">Registracija uporabnika</string>
    <string name="ime">Ime</string>
    <string name="priimek">Priimek</string>
    <string name="naslov">Naslov</string>
    <string name="starost">Starost</string>
    <string name="email">E-mail</string>
    <string name="telefon">Telefon</string>
    <string name="registracija">Registracija</string>
    <string name="nazaj">Nazaj</string>
    <string name="frizerji">Frizerji</string>
    <string name="storitve">Storitve</string>
    <string name="podrobnosti">Podrobnosti</string>
    <string name="preklici">Prekliči</string>
    <string name="termini">Moji termini</string>
    <string name="izberi_uro_termina">Izberi uro termina</string>
    <string name="izberi">Izberi</string>
    <string name="opombe">Opombe</string>
    <string name="potrdi">Potrdi</string>
    <string name="povzetek_rezervacije">Povzetek rezervacije</string>
    <string name="preklici_termin">Prekliči termin</string>
    <string name="napaka_prazen_odgovor_streznika">Prazen odgovor strežnika.</string>
    <string name="napaka_neveljaven_token">Token ni veljaven, prijavi se ponovno.</string>
    <string name="vnesi_ime_in_geslo">Vnesi uporabniško ime in geslo.</string>
    <string name="napaka_pri_prijavi">Napaka pri prijavi.</string>
    <string name="napaka_vracanje_tokena">Napaka: token ni vrnjen.</string>
    <string name="napaka_registracija">Napaka pri registraciji.</string>
    <string name="obvezna_polja">Vsa polja so obvezna.</string>
    <string name="uspesna_registracija">Registracija uspešna</string>
    <string name="uspesna_registracija_naslov">Uspeh</string>
    <string name="uspesna_registracija_nadaljevanje">Sedaj se lahko prijavite.</string>
    <string name="uspesna_registracija_dialog">%1$s\n\n%2$s</string>
    <string name="ok">Ok</string>
    <string name="napaka_timeout">Povezava je potekla (timeout).</string>
    <string name="napaka_ni_interneta">Ni internetne povezave.</string>
    <string name="napaka_povezava_streznik">Napaka pri povezavi s strežnikom.</string>
    <string name="label_starost">Starost: %1$d let</string>
    <string name="label_mail">Mail: %1$s</string>
    <string name="label_telefon">Telefon: %1$s</string>
    <string name="label_opis">Opis: %1$s</string>
    <string name="label_specializacije">Specializacije: %1$s</string>
    <string name="ni_specializacij">Brez</string>
    <string name="label_delovniki">Delovniki:</string>
    <string name="ni_delovnika"> /</string>
    <string name="delovnik_format">\n• %1$s: %2$s - %3$s</string>
    <string name="ime_priimek">%1$s %2$s</string>
    <string name="label_frizer">Frizer: %1$s</string>
    <string name="label_storitve">Storitve:\n</string>
    <string name="label_izbrane_storitve_tri">Izbrane storitve:\n%1$s</string>
    <string name="storitev_format">• %1$s (%2$d min, %3$.2f €)\n</string>
    <string name="item_bullet">• %1$s</string>
    <string name="label_zacetek">Začetek termina: %1$s</string>
    <string name="label_konec">Konec termina: %1$s</string>
    <string name="label_trajanje">Trajanje storitev: %1$d min</string>
    <string name="label_cena">Cena storitev: %1$.2f €</string>
    <string name="label_opombe">Opombe: %1$s</string>
    <string name="opombe_prazno">Opombe: /</string>
    <string name="label_status">Status: %1$s</string>
    <string name="status_rezervirano">Rezervirano</string>
    <string name="napaka_nalaganje_frizerjev">"Napaka pri nalaganju frizerjev."</string>
    <string name="napaka_pridobivanje_frizerjev">Napaka pri pridobivanju frizerjev.</string>
    <string name="napaka_pridobivanje_storitev">Napaka pri pridobivanju storitev.</string>
    <string name="storitve_niso_nalozene">Storitve še niso naložene.</string>
    <string name="izberi_frizerja">Izberi frizerja.</string>
    <string name="izberi_datum_in_storitev">Izberi datum in vsaj eno storitev.</string>
    <string name="napaka_izracun_razpolozljivosti">Napaka pri izračunu razpoložljivosti.</string>
    <string name="napaka_pridobivanje_podrobnosti_storitve">Napaka pri pridobivanju podrobnosti storitve.</string>
    <string name="dialog_storitev_podrobnosti">Opis:\n%1$s\n\nTrajanje: %2$d min\n\nCena: %3$.2f €</string>
    <string name="razlog_frizer_ne_dela">Frizer ne dela ta dan.</string>
    <string name="blok_format">%1$s - %2$s</string>
    <string name="napaka_priprava_predogleda">Napaka pri pripravi predogleda.</string>
    <string name="izberi_uro">Izberi uro.</string>
    <string name="label_izbran_frizer">Izbran frizer: %1$s</string>
    <string name="label_izbran_dan">Izbran dan: %1$s</string>
    <string name="ni_blokov">Ni razpoložljivih blokov.</string>
    <string name="mozni_zacetki_termina">Možni začetki termina:\n%1$s</string>
    <string name="napaka_preklic_termina">"Napaka pri preklicu termina."</string>
    <string name="termin_uspesno_preklican">Termin uspešno preklican.</string>
    <string name="napaka_nalaganje_terminov">Napaka pri nalaganju terminov.</string>
    <string name="preklic_termina">Preklic termina</string>
    <string name="preklic_termina_potrditev">Ali ste prepričani, da želite preklicati ta termin?</string>
    <string name="da">Da</string>
    <string name="ne">Ne</string>
    <string name="napaka_rezervacija_termina">Napaka pri rezervaciji termina.</string>
    <string name="potrditev_rezervacije">Potrditev rezervacije</string>
    <string name="potrditev_rezervacije_potrditev">Ali ste prepričani, da želite potrditi rezervacijo?</string>
    <string name="uspeh">Uspeh</string>
    <string name="spol">Spol</string>
    <string name="izberi_frizerja_dvopicje">Izberi frizerja:</string>
</resources>