<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Naslov -->
        <TextView
            android:id="@+id/tvNaslov"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rezerviraj_termin"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/outline_content_cut_24"
            android:drawablePadding="4dp"/>

        <!-- Izbrane storitve -->
        <TextView
            android:id="@+id/tvIzbraneStoritve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/izbrane_storitve"
            android:layout_marginBottom="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIzberiStoritve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/izberi_storitve" />

        <TextView
            android:id="@+id/tvOpomba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opomba_vec_storitev"
            android:layout_marginTop="8dp"
            android:textSize="12sp" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            app:dividerThickness="1dp"/>

        <TextView
            android:id="@+id/tvSpol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/izberi_frizerja_dvopicje"
            android:layout_marginTop="4dp" />

        <!-- Spinner frizerjev -->
        <Spinner
            android:id="@+id/spinnerFrizerji"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"/>

        <TextView
            android:id="@+id/tvPreglejFrizerje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preglej_frizerje"
            android:textColor="?attr/colorPrimary"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            app:dividerThickness="1dp"/>


        <!-- Datum -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDatum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/izberi_datum"
                android:focusable="false"
                android:clickable="true"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPreveri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preveri"
            android:layout_marginTop="24dp" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            app:dividerThickness="1dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPregledTerminov"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/moji_termini"
            android:layout_marginTop="6dp" />

    </LinearLayout>
</ScrollView>
